Invoices details on mobile only + fix openid button

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -245,6 +245,8 @@ a {
     font-weight: 600;
     cursor: pointer;
     transition: background-color 0.2s, transform 0.1s;
+    display: flex;
+    justify-content: center;
 }
 .styled-form button.btn-inline, .styled-form a.btn.btn-inline {
     padding: 0.75rem 1.5rem;
@@ -928,9 +930,12 @@ div.container-full-form {
     display: table-cell;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 820px) {
     .hide-on-mobile {
         display: none !important;
+    }
+    .details-on-mobile {
+        cursor: pointer;
     }
 }
 
